Fix collapsed menu background

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -20,6 +20,10 @@ a {
   }
 }
 
+.wrap {
+  width:100%;
+}
+
 .container {
   background-color: $content-bg;
 }
